// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MultiRowField component renders all what was passed as a props 1`] = `
<div
  className="j-col__item"
>
  <div>
    <div
      className="j-row"
    >
      <label
        className="j-label"
        htmlFor={undefined}
      >
        mock-title
         
        mock-placeholder
      </label>
      <button
        className="j-control"
        onClick={[Function]}
        type="button"
      >
        <span
          aria-label={undefined}
          className="j-icon j-icon--type-add j-control__icon"
        />
      </button>
    </div>
    <div
      className="j-hint j-hint--title"
    >
      mock-hint
    </div>
    <div
      className="j-col__item double-fields"
    >
      <div
        className="j-row"
      >
        <div
          className={[Function]}
        >
          <input
            className="j-input"
            disabled={undefined}
            name="mock-name[0]"
            onBlur={[Function]}
            onChange={[Function]}
            onDragStart={[Function]}
            onDrop={[Function]}
            onFocus={[Function]}
            placeholder="mock-placeholder"
            required={undefined}
            type="text"
            value={
              Object {
                "name": "me",
              }
            }
          />
        </div>
        <div
          className="j-row__control"
        >
          <button
            className="j-control"
            onClick={[Function]}
            type="button"
          >
            <span
              aria-label={undefined}
              className="j-icon j-icon--type-remove j-control__icon"
            />
          </button>
        </div>
      </div>
    </div>
    <div
      className="j-col__item double-fields"
    >
      <div
        className="j-row"
      >
        <div
          className={[Function]}
        >
          <input
            className="j-input"
            disabled={undefined}
            name="mock-name[1]"
            onBlur={[Function]}
            onChange={[Function]}
            onDragStart={[Function]}
            onDrop={[Function]}
            onFocus={[Function]}
            placeholder="mock-placeholder"
            required={undefined}
            type="text"
            value={
              Object {
                "name": "you",
              }
            }
          />
        </div>
        <div
          className="j-row__control"
        >
          <button
            className="j-control"
            onClick={[Function]}
            type="button"
          >
            <span
              aria-label={undefined}
              className="j-icon j-icon--type-remove j-control__icon"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`MultiRowField component renders correctly 1`] = `
<div
  className="j-col__item"
>
  <div>
    <div
      className="j-row"
    >
      <label
        className="j-label"
        htmlFor={undefined}
      >
         
      </label>
      <button
        className="j-control"
        onClick={[Function]}
        type="button"
      >
        <span
          aria-label={undefined}
          className="j-icon j-icon--type-add j-control__icon"
        />
      </button>
    </div>
    <div
      className="j-col__item double-fields"
    >
      <div
        className="j-row"
      >
        <div
          className={[Function]}
        >
          <input
            className="j-input"
            disabled={undefined}
            name="mock-name[0]"
            onBlur={[Function]}
            onChange={[Function]}
            onDragStart={[Function]}
            onDrop={[Function]}
            onFocus={[Function]}
            placeholder=""
            required={undefined}
            type="text"
            value={
              Object {
                "name": "me",
              }
            }
          />
        </div>
        <div
          className="j-row__control"
        >
          <button
            className="j-control"
            onClick={[Function]}
            type="button"
          >
            <span
              aria-label={undefined}
              className="j-icon j-icon--type-remove j-control__icon"
            />
          </button>
        </div>
      </div>
    </div>
    <div
      className="j-col__item double-fields"
    >
      <div
        className="j-row"
      >
        <div
          className={[Function]}
        >
          <input
            className="j-input"
            disabled={undefined}
            name="mock-name[1]"
            onBlur={[Function]}
            onChange={[Function]}
            onDragStart={[Function]}
            onDrop={[Function]}
            onFocus={[Function]}
            placeholder=""
            required={undefined}
            type="text"
            value={
              Object {
                "name": "you",
              }
            }
          />
        </div>
        <div
          className="j-row__control"
        >
          <button
            className="j-control"
            onClick={[Function]}
            type="button"
          >
            <span
              aria-label={undefined}
              className="j-icon j-icon--type-remove j-control__icon"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
